# PERAL_robot_design

./: .gitignore  .gitmodules  BOM.md  CONTRIBUTING.md  LICENSE  README.md
csv data collected/fig8/: odom.csv
csv data collected/oval/: odom.csv
design/: README.md
design/documentation/: README.md
design/electrical/: README.md
design/mechanical/: README.md
docs/: QUICK_REFERENCE.md
docs/assembly/: README.md
docs/usage/: README.md
haloball/src/FAST_LIO/: README.md
haloball/src/FAST_LIO/Log/: mat_pre.txt
haloball/src/haloball_bringup/: CMakeLists.txt
haloball/src/haloball_bringup/config/: MID360_config.json
haloball/src/haloball_bringup/src/: base_link_tf.cpp
haloball/src/nmpc_acados/include/: nmpc_acados_node.h
haloball/src/nmpc_acados/scripts/: robot_model.py
haloball_16cm/haloball/: build.sh
haloball_16cm/haloball/src/FAST_LIO/config/: mid360.yaml
haloball_16cm/haloball/src/haloball_bringup/: CMakeLists.txt  package.xml
haloball_16cm/haloball/src/haloball_bringup/config/: pointcloud_filter.yaml
haloball_16cm/haloball/src/haloball_bringup/launch/: bringup.launch.py
haloball_16cm/haloball/src/haloball_bringup/rviz/: nmpc.rviz
haloball_16cm/haloball/src/haloball_bringup/scripts/: marker.py  nlp_to_nav2.py  odometry_simulator.py
haloball_16cm/haloball/src/haloball_bringup/src/: laser_to_pointcloud.cpp  odom_callback.cpp  pointcloud_filter.cpp
haloball_16cm/haloball/src/mpc_controller/: CMakeLists.txt  README.md  create_solver.sh  package.xml  setup_acados_arm64.sh
haloball_16cm/haloball/src/mpc_controller/include/: mpc_controller.hpp
haloball_16cm/haloball/src/mpc_controller/launch/: mpc_controller.launch.py
haloball_16cm/haloball/src/mpc_controller/rviz/: nmpc.rviz
haloball_16cm/haloball/src/mpc_controller/scripts/: create_solver.py  robot_model.py
haloball_16cm/haloball/src/mpc_controller/src/: mpc_controller.cpp  odom_path_publisher.cpp  trajectory_publisher.cpp
haloball_16cm/haloball/src/wheels_velocity_msgs/: CMakeLists.txt
haloball_16cm/hardware documentation/: haloball_v2 documentation.xlsx
haloball_16cm/microros_esp32_v3/: README.md  platformio.ini
haloball_16cm/microros_esp32_v3/extra_packages/wheels_velocity_msgs/: package.xml
haloball_16cm/microros_esp32_v3/src/: main.cpp
haloball_25cm/csv data collected/circle/: odom.csv
haloball_25cm/haloball/src/FAST_LIO/rviz/: fastlio.rviz
haloball_25cm/haloball/src/haloball_bringup/: package.xml
haloball_25cm/haloball/src/haloball_bringup/launch/: bringup.launch.py
haloball_25cm/haloball/src/livox_ros_driver2/: README.md
haloball_25cm/haloball/src/nmpc_acados/: CMakeLists.txt  create_solver.sh  package.xml  setup_acados.sh
haloball_25cm/haloball/src/nmpc_acados/launch/: nmpc.launch.py
haloball_25cm/haloball/src/nmpc_acados/rviz/: nmpc.rviz
haloball_25cm/haloball/src/nmpc_acados/scripts/: create_solver.py
haloball_25cm/haloball/src/nmpc_acados/src/: nmpc_acados_node.cpp  odom_path_publisher.cpp  trajectory_publisher.cpp
haloball_25cm/microros_esp32/: README.md  platformio.ini
haloball_25cm/rosbag/circle/: metadata.yaml  rosbag2_2025_09_09-12_49_10_0.mcap
hardware documentation/: README.md  haloball_documentation.xlsx
hardware documentation/ESP32-C3 SuperMini/: sync.ffs_db
hardware/cad/: README.md
hardware/electronics/: README.md
hardware/mechanical/: README.md
microros_esp32/: README.md
microros_esp32/lib/config/: config.h
microros_esp32/lib/encoder/: encoder.cpp  encoder.h
microros_esp32/lib/microros/: microros.cpp  microros.h
microros_esp32/lib/motor_control/: motor_control.cpp  motor_control.h
microros_esp32/lib/pid_controller/: pid_controller.cpp  pid_controller.h
microros_esp32/src/: main.cpp
software/: README.md
software/control/: README.md
software/firmware/: README.md
software/simulation/: README.md
sourcing/: README.md
sourcing/components/: README.md
sourcing/materials/: README.md
sourcing/vendors/: README.md
student_code/: README.md
student_code/control/: README.md
student_code/hardware/: README.md
student_code/perception/: README.md
student_code/simulation/: README.md
